modificando vista mobil 375px

--- a/style.css
+++ b/style.css
@@ -51,9 +51,10 @@ body {
 .calculator-creen {
   background-color: #a5a5a5;
   margin: 0;
-  padding: 2rem 1rem;
+  padding: 1rem;
   text-align: end;
-  font: 400 normal 32px/1rem arial;
+  height: 60px;
+  /* font: 400 normal 32px/1rem arial; */
   display: flex;
   overflow: auto;
   align-items: center;
@@ -68,7 +69,7 @@ p {
   background-color: black;
   border-radius: 10px;
   box-shadow: 4px 4px 4px #d5d8dc;
-  font: 500 normal 25px/30px arial;
+  font: 500 normal 32px/30px arial;
   color: white;
 }
 
@@ -111,5 +112,18 @@ button {
   .container {
     box-sizing: border-box;
     margin: auto;
+    height: 100%;
+    width: 100%;
+    border-radius: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20px;
+  }
+  .calculator li {
+    margin: auto;
+  }
+  .calculator {
+    text-align: center;
   }
 }
