--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ p {
 .symbol-active {
   border: 1px solid blue;
   box-shadow: 0 0 10px blue !important;
+  box-sizing: border-box;
 }
 
 button {
